tests/ui/non_exhaustive_match.stderr
error: non-exhaustive patterns
    ╭─[tests/ui/non_exhaustive_match.ina:12:11]
    │
 12 │     match x {
    │           ┬
    │           ╰─ pattern `B` not covered
    ∙
────╯
error: non-exhaustive patterns
    ╭─[tests/ui/non_exhaustive_match.ina:16:11]
    │
 16 │     match Some(20) {
    │           ────┬───
    │               ╰───── pattern `Some(_)` not covered
    ∙
────╯
error: non-exhaustive patterns
    ╭─[tests/ui/non_exhaustive_match.ina:28:11]
    │
 28 │     match Some(T::A) {
    │           ─────┬────
    │                ╰────── pattern `Some(B)` not covered
    ∙
────╯
error: non-exhaustive patterns
    ╭─[tests/ui/non_exhaustive_match.ina:39:11]
    │
 39 │     match None {
    │           ──┬─
    │             ╰─── patterns `None` and `Some(A(B, A))` not covered
    ∙
────╯
error: non-exhaustive patterns
    ╭─[tests/ui/non_exhaustive_match.ina:44:11]
    │
 44 │     match 0 {
    │           ┬
    │           ╰─ pattern `_` not covered
    ∙
────╯
error: non-exhaustive patterns
    ╭─[tests/ui/non_exhaustive_match.ina:48:11]
    │
 48 │     match None {
    │           ──┬─
    │             ╰─── pattern `Some(_)` not covered
    ∙
────╯
error: non-exhaustive patterns
    ╭─[tests/ui/non_exhaustive_match.ina:59:11]
    │
 59 │     match true {
    │           ──┬─
    │             ╰─── pattern `false` not covered
    ∙
────╯
